[package]
name = "zebu"
version = "0.1.0"
description = "A Z80 emulator written in Rust"
authors = ["Florin Saftoiu <florin.saftoiu@soft-to-you.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.6"
