[package]
name = "zebu"
version = "0.1.0"
description = "A Z80 emulator written in Rust"
authors = ["Florin Saftoiu <florin.saftoiu@soft-to-you.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
piston_window = "0.116.0"

[dev-dependencies]
mockall = "0.8.3"